--- a/Introduction3.ipynb
+++ b/Introduction3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPLPbQFEsQJbkYu9sVuqk7G",
+      "authorship_tag": "ABX9TyP/cyTNwTFGuxC8Az3Iz1A0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,9 +51,33 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "li = [1, 2, 3, 4, 5]\n",
+        "print(li)"
+      ],
+      "metadata": {
+        "id": "zHx01c2q-Vy4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8efefeb4-dc0e-4e3a-9be4-bdff5d53653e"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "zHx01c2q-Vy4"
+        "id": "A-FkTEIXBRkI"
       },
       "execution_count": null,
       "outputs": []
