--- a/Introduction3.ipynb
+++ b/Introduction3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP/cyTNwTFGuxC8Az3Iz1A0",
+      "authorship_tag": "ABX9TyNcov38JzGjBLu2TzvpF6k8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,7 @@
         },
         "outputId": "8efefeb4-dc0e-4e3a-9be4-bdff5d53653e"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -75,9 +75,34 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "li = [1, 2, 3, 4, 5, 7, 6, 3, 2, 1]\n",
+        "li.sort()\n",
+        "print(li)"
+      ],
+      "metadata": {
+        "id": "A-FkTEIXBRkI",
+        "outputId": "adf51bf2-2f3d-4c5a-ef98-7df4103423d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 1, 2, 2, 3, 3, 4, 5, 6, 7]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "A-FkTEIXBRkI"
+        "id": "ENbRgZKtCr8E"
       },
       "execution_count": null,
       "outputs": []
